--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -1,12 +1,12 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="css/easy-selector-##VERSION##.css"/>
+        <link rel="stylesheet" type="text/css" href="css/##PROJECT_NAME##-##VERSION##.css"/>
         <script type="text/javascript" src="lib/jquery-1.10.1.js"></script>
-        <script type="text/javascript" src="lib/easy-selector-##VERSION##.js"></script>
+        <script type="text/javascript" src="lib/##PROJECT_NAME##-##VERSION##.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
-        <title>Easy Selector Demo v##VERSION##</title>
+        <title>##PROJECT_NAME## Demo v##VERSION##</title>
     </head>
     <body>
     </body>
