--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -4,10 +4,12 @@
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="css/##PROJECT_NAME##-##VERSION##.css"/>
         <script type="text/javascript" src="lib/jquery-1.10.1.js"></script>
-        <script type="text/javascript" src="lib/##PROJECT_NAME##-##VERSION##.js"></script>
+        <script type="text/javascript" src="js/##PROJECT_NAME##-##VERSION##.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <title>##PROJECT_NAME## Demo v##VERSION##</title>
     </head>
     <body>
+        <input type="text"/>
+        <div>xxx</div>
     </body>
 </html>
