--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -9,7 +9,9 @@
         <title>##PROJECT_NAME## Demo v##VERSION##</title>
     </head>
     <body>
-        <input type="text"/>
+        <div style="width: 600px" id="cont" >
+        </div>
+            <input type="text"/>
         <div>xxx</div>
     </body>
 </html>
